# vitobar

./: Cargo.toml  config.toml  flake.nix  result
src/: config.rs  icons.rs  main.rs  render.rs
src/greeter/: main.rs
src/launcher/: desktop.rs  main.rs
src/modules/: bluetooth.rs  clock.rs  mod.rs  sysinfo.rs  tray.rs  widgets.rs  windows.rs  workspaces.rs
src/settings/: categories.rs  main.rs  widgets.rs
src/settings/themes/: catppuccin-latte.json  catppuccin-mocha.json  dracula.json  gruvbox-dark.json  gruvbox-light.json  nord.json  rose-pine.json  solarized-dark.json  solarized-light.json  tokyo-night.json
