[package]
name    = "vitobar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vitobar"
path = "src/main.rs"

[dependencies]
# Wayland layer shell surface
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-client          = "0.31"
wayland-protocols       = { version = "0.32", features = ["client"] }
wayland-protocols-wlr   = { version = "0.3", features = ["client"] }

# 2D rendering
tiny-skia = "0.11"

# Niri IPC — workspaces + window list
niri-ipc = "0.1"

# System info
sysinfo = "0.30"

# Time
chrono = "0.4"

# Config / colors
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# Event loop (timer + Wayland source)
calloop                = "0.13"
calloop-wayland-source = "0.3"

# Logging
log         = "0.4"
env_logger  = "0.11"

# Font rendering
fontdue = "0.9"
